[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ENTITIES/ItemDrop.gd" type="Script" id=1]
[ext_resource path="res://m3x6.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://textures/gui/inventory/tooltip.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0, 0 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="ItemDrop" type="Area2D"]
position = Vector2( 64, 64 )
z_index = 5
collision_layer = 32768
collision_mask = 2048
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 5.0
margin_top = -12.0
margin_right = 17.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -2.0
margin_right = 3.0
margin_bottom = 4.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="." to="." method="_on_ItemDrop_area_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_ItemDrop_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ItemDrop_mouse_exited"]
